--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-  command = "npm run build"
-  publish = "build"
+  command = "npm run build --force"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+[build.environment]
+  NODE_ENV = "production"
+
+[build.processing]
+  skip_processing = true
