--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,6 @@
 [build]
-  command = "npm run build --force"
+  command = "npm run build"
+  publish = "dist" # Ensure this matches your actual build output directory
 
 [build.environment]
   NODE_ENV = "production"
-
-[build.processing]
-  skip_processing = true
