--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^3.5.0",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.5",
     "react": "^18.2.0",
