--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.22.0",
+    "stripe": "^15.11.0",
     "styled-components": "^6.1.0",
     "swiper": "^11.0.6"
   },
